# dice

./: .gitignore  .gitmodules  .merlin  Dockerfile  LICENSE  META  Makefile  README.md  _tags  bdd.dot  dice.install  dice.opam  dune  dune-project  munin.dice  myocamlbuild.ml  opam  out.txt  test.txt
.github/workflows/: ci.yml
bench/: .merlin  dicebench.ml  dune
benchmarks/: diamond-network.webppl  encrypt.webppl  ladder-network.psi  ladder-network.webppl  mc.psi  network-diamond.psi  simpleCaesar.dice  simpleCaesar.ppl
benchmarks/baselines/: alarm.dice  alarm.psi  alarm.wppl  burglarAlarm.psi  digitRecognition.dice  digitRecognition.psi  evidence1.dice  evidence2.dice  evidence2.psi  gen_digit.py  grass.dice  grass.psi  murderMystery.dice  murderMystery.psi  noisyOr.dice  twocoins.dice  twocoins.psi
benchmarks/bayesian-networks/: BN_78.dice  BN_79.dice  alarm-alt.dice  alarm-safer.dice  alarm.bif.dice  alarm.bif.psi  alarm.dice  alarm.ppl  alarm.psi  andes.dice  asia.dice  barley.dice  bench-ace.py  bench-psi.py  cancer.bif  cancer.bif.dice  cancer.bif.psi  cancer.dice  cancer.psi  child.bif  child.dice  cpcs54.dice  diabetes.bif  diagnose_a.dice  diagnose_a_multi.dice  diagnose_b.dice  diagnose_b_multi.dice  earthquake.dice  emdec6g.dice  fire_alarm.dice  gen-files.py  hailfinder.bif.dice  hailfinder.bif.psi  hailfinder.ppl  hailfinder.psi  hepar2.bif  hepar2.bif.dice  hepar2.bif.psi  hepar2.ppl  hepar2.psi  (+34 more)
benchmarks/bayesian-networks/full-joint/: alarm.dice  cancer.dice  hailfinder.dice  hepar2.dice  munin.dice  survey.dice  water.dice
benchmarks/bayesian-networks/single-marginal/: alarm.bif.dice  cancer.bif.dice  hailfinder.bif.dice  hailfinder.bif.psi  hepar2.bif.dice  hepar2.bif.psi  insurance.bif.dice  munin.bif.dice  munin.bif.psi  pigs.bif.dice  pigs.bif.psi  survey.bif.dice  water.bif.dice
benchmarks/synthetic/: example_01.dice  example_02.dice  example_03.dice  example_04.dice  example_05.dice  example_06.dice  example_07.dice  example_08.dice  example_09.dice  example_10.dice  example_11.dice  example_12.dice  example_13.dice
benchmarks/verification/: adv-grid-100-3.dice  brp-128-5-H=5.dice  guymc-v1-5-unrolled.dice  motiv-2.dice  nand-20-1.dice  queues-H=10.dice  weatherfactory10-H=10.dice
docs/: lists.md
lib/: .merlin  Bdd.ml  Bdd.mli  BddUtil.ml  BddUtil.mli  Compiler.ml  Compiler.mli  CoreGrammar.ml  CoreGrammar.mli  CoreGrammar.mli_  ExternalGrammar.ml  LogProbability.ml  LogProbability.mli  LogicalFormula.ml  LogicalFormula.mli  LogicalFormular.mli  Optimization.ml  Parser.messages  Parser.mly  Parser_messages.ml  Passes.ml  Passes.mli  Util.ml  Util.mli  VarOrder.ml  VarState.ml  VarState.mli  Wmc.ml  Wmc.mli  dune  lexer.mll  opam
resources/: alarm_test.dice  alarm_test.dice-old  binom-ex.dice  caesar-ex.dice  caesar-iter.dice  caesar-recur.dice  caesar-unif.dice  caesar_test.dice  caesar_test.ppl  cancer_test.dice  cancer_test.ppl  ex-fun.dice  example.dice  factorial.dice  int-ex.dice  list-distribution.dice  list-ex.dice  list-index.dice  munin.dice  normal.dice  pmc1.dice  pmc2.dice  recursion.dice  transmit.dice  tuple-ex.dice  unif-ex.dice  unif-test.dice
resources/hard_benchmarks/: link.dice  link.ppl  win95pts.dice
resources/other_bayesian_networks/: munin1.bif  munin2.bif
src/: AddImpl.ml  BddUtil.ml  CoreGrammar.ml  Dice.ml  ExternalGrammar.ml  LogProbability.mli  Main.ml  Optimization.ml  Parser.mly  Passes.ml  Run_bench.ml  Test.ml  Util.ml  VarState.ml  Wmc.ml  lexer.mll
test/: .merlin  Test.ml  dune
