(data_only_dirs benchmarks rsdd)

(rule
 (deps (source_tree rsdd))
 (targets librsdd.a librsdd.dylib)
 (action
  (no-infer
    (progn
      (chdir rsdd (run cargo build --release))
      (copy rsdd/target/release/librsdd.dylib librsdd.dylib)
      (copy rsdd/target/release/librsdd.a librsdd.a)
      ))))



(env
  (dev
    (flags (:standard -warn-error -A))))