(menhir
 (modules Parser)
 (flags "--table"))

(ocamllex lexer)

(rule
 (deps (source_tree ../rsdd))
 (targets librsdd.a)
 (action
  (no-infer
    (progn
      (chdir ../rsdd (run cargo build --release))
      (copy ../rsdd/target/release/librsdd.a librsdd.a)
      ))))


(library
 (libraries core cudd sexplib menhirLib ounit2 ctypes ctypes.foreign)
 (foreign_archives rsdd)
 (library_flags (-linkall))
 (name diceLib)
 (preprocess (pps ppx_jane)))
