(menhir
 (modules Parser)
 (flags "--table"))

(ocamllex lexer)

(rule
 (deps (source_tree ../rsdd))
 (targets librsdd.a dllrsdd.so)
 (action
  (no-infer
    (progn
      (chdir ../rsdd (run cargo build --release))
      (copy ../rsdd/target/release/librsdd.dylib ../rsdd/target/release/librsdd.so)
      (copy ../rsdd/target/release/librsdd.so dllrsdd.so)
      (copy ../rsdd/target/release/librsdd.a librsdd.a)
      ))))


(library
 (libraries core cudd sexplib menhirLib ounit2 ctypes ctypes.foreign bignum)
 (foreign_archives rsdd)
 (library_flags (-linkall))
 (name diceLib)
 (preprocess (pps ppx_jane)))
